--- a/kaggle/Elucidata/ML_eff_b0.ipynb
+++ b/kaggle/Elucidata/ML_eff_b0.ipynb
@@ -17,9 +17,15 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
-    "from sklearn.preprocessing import FunctionTransformer, MinMaxScaler\n",
-    "from sklearn.pipeline import make_pipeline"
+    "from sklearn.preprocessing import FunctionTransformer, MinMaxScaler, StandardScaler\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "# 모든 FutureWarning 무시\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
@@ -76,10 +82,10 @@
     "    # EfficientNet의 형식으로 바꿉니다.\n",
     "    with tf.device('/CPU:0'):\n",
     "        images = tf.constant(tf.keras.applications.efficientnet.preprocess_input(images))\n",
-    "    df_spots = pd.concat(spots)\n",
+    "    df_spots = pd.concat(spots).reset_index(drop = True)\n",
     "    with tf.device('/CPU:0'):\n",
     "        images_test = tf.constant(tf.keras.applications.efficientnet.preprocess_input(images_test))\n",
-    "    df_spots_test = pd.concat(spots_test)\n",
+    "    df_spots_test = pd.concat(spots_test).reset_index(drop = True)\n",
     "    return images, df_spots, images_test, df_spots_test\n",
     "\n",
     "def make_img_proc_info(df, img_with, img_height):\n",
@@ -122,8 +128,10 @@
     "    )\n",
     "\n",
     "augmentation_layers = [\n",
-    "    tf.keras.layers.RandomFlip(\"horizontal\"),\n",
-    "    tf.keras.layers.RandomRotation(0.1),\n",
+    "    tf.keras.layers.RandomFlip(\"horizontal_and_vertical\"),\n",
+    "    tf.keras.layers.RandomRotation(0.5),\n",
+    "    tf.keras.layers.RandomZoom(0.1),\n",
+    "    tf.keras.layers.RandomContrast(0.1)\n",
     "]\n",
     "\n",
     "def data_augmentation(x):\n",
@@ -134,7 +142,7 @@
     "images, df_spots, images_test, df_spots_test = load_data(\"data/elucidata_ai_challenge_data.h5\")\n",
     "targets = [i for i in df_spots.columns if i.startswith('C')]\n",
     "\n",
-    "target_proc = make_pipeline(FunctionTransformer(np.log, np.exp),  MinMaxScaler((-1, 1)))\n",
+    "target_proc = make_pipeline(FunctionTransformer(np.log, np.exp),  MinMaxScaler())\n",
     "target_proc.fit(df_spots[targets])\n",
     "df_spots[targets] = target_proc.transform(df_spots[targets])"
    ]
@@ -146,32 +154,128 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_width = 224\n",
-    "img_height = 224\n",
+    "from scipy.stats import spearmanr\n",
     "\n",
-    "df_spots = make_img_proc_info(df_spots, img_width, img_height)\n",
-    "df_spots_test = make_img_proc_info(df_spots_test, img_width, img_height)"
+    "def create_model(img_width, img_height):\n",
+    "    input_shape = (img_width, img_height, 3)\n",
+    "    enet = tf.keras.applications.EfficientNetB0(\n",
+    "        include_top = False, \n",
+    "        weights = 'imagenet',\n",
+    "        input_shape = input_shape,\n",
+    "        pooling = 'avg'\n",
+    "    )\n",
+    "    inputs = tf.keras.Input(shape = input_shape)\n",
+    "    x = enet(inputs, training = False)\n",
+    "    x = tf.keras.layers.Dropout(0.5)(x)\n",
+    "    d1 = tf.keras.layers.Dense(256, activation = 'relu', kernel_initializer = 'HeUniform')\n",
+    "    x = d1(x)\n",
+    "    d2 = tf.keras.layers.Dense(len(targets))\n",
+    "    outputs = d2(x)\n",
+    "    m = tf.keras.models.Model(inputs, outputs)\n",
+    "    return m, (enet, d1, d2)\n",
+    "\n",
+    "def reconstruct_model(layers):\n",
+    "    input_shape = (img_width, img_height, 3)\n",
+    "    inputs = tf.keras.Input(shape = input_shape)\n",
+    "    x = layers[0](inputs, training = True)\n",
+    "    x = tf.keras.layers.Dropout(0.2)(x)\n",
+    "    x = layers[1](x)\n",
+    "    outputs = layers[2](x)\n",
+    "    m = tf.keras.models.Model(inputs, outputs)\n",
+    "    return m\n",
+    "\n",
+    "def train_model(\n",
+    "        m, train_idx, valid_idx, learning_rate, \n",
+    "        target_proc = FunctionTransformer(lambda x: x, lambda x: x), \n",
+    "        batch_size = 32, epochs = 20, step = ''\n",
+    "    ):\n",
+    "\n",
+    "    ds_cv_train = create_tf_ds(\n",
+    "        df_spots.iloc[train_idx].pipe(\n",
+    "            lambda x: x.drop(columns = targets).join(\n",
+    "                x[targets].clip(lower = x[targets].quantile(0.05), upper = x[targets].quantile(0.95), axis = 1)\n",
+    "            )\n",
+    "        ).pipe(\n",
+    "            lambda x: pd.concat([\n",
+    "                x, x.sample(n = batch_size - (len(x) % batch_size))\n",
+    "            ])\n",
+    "        )\n",
+    "    ).shuffle(5000).map(\n",
+    "        lambda X, Y: (proc_images(X, images), Y)\n",
+    "    ).map(\n",
+    "        lambda X, Y: (data_augmentation(X), Y)\n",
+    "    ).batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()\n",
+    "\n",
+    "    ds_cv_prd = create_tf_ds(\n",
+    "        df_spots.iloc[train_idx]\n",
+    "    ).map(\n",
+    "        lambda X, Y: (proc_images(X, images), Y)\n",
+    "    ).batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()\n",
+    "    \n",
+    "    if valid_idx is not None:\n",
+    "        ds_valid = create_tf_ds(df_spots.iloc[valid_idx]).map(\n",
+    "            lambda X, Y: (proc_images(X, images), Y)\n",
+    "        ).batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()\n",
+    "    else:\n",
+    "        ds_valid = None\n",
+    "    \"\"\"\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.CosineDecay(\n",
+    "        initial_learning_rate=learning_rate,\n",
+    "        decay_steps=5000,\n",
+    "        alpha=0.1\n",
+    "    )\n",
+    "    \"\"\"\n",
+    "    lr_schedule = learning_rate\n",
+    "    m.compile(\n",
+    "        loss = tf.keras.losses.MeanSquaredError(),\n",
+    "        optimizer = tf.keras.optimizers.Adam(learning_rate = lr_schedule),\n",
+    "        metrics = [tf.keras.metrics.MeanSquaredError()]\n",
+    "    )\n",
+    "\n",
+    "    df_true_train = df_spots.iloc[train_idx][targets].pipe(\n",
+    "        lambda x: pd.DataFrame(\n",
+    "            target_proc.inverse_transform(x), index = x.index, columns = targets\n",
+    "        )\n",
+    "    )\n",
+    "    if valid_idx is not None:\n",
+    "        df_true = df_spots.iloc[valid_idx][targets].pipe(\n",
+    "            lambda x: pd.DataFrame(\n",
+    "                target_proc.inverse_transform(x), index = x.index, columns = targets\n",
+    "            )\n",
+    "        )\n",
+    "    else:\n",
+    "        df_true = None\n",
+    "    progress_bar = tqdm(total = epochs, desc=step)\n",
+    "    scores_train, scores_valid = list(), list()\n",
+    "    df_prd = None\n",
+    "    for i in range(epochs):\n",
+    "        hist = m.fit(ds_cv_train, epochs = 1, verbose = 0)\n",
+    "        df_prd = pd.DataFrame(\n",
+    "            target_proc.inverse_transform(m.predict(ds_cv_prd, verbose = 0)), \n",
+    "            index = df_true_train.index, columns = targets\n",
+    "        )\n",
+    "        scores_train.append(\n",
+    "            df_true_train.apply(lambda x: spearmanr(x, df_prd.loc[x.name])[0], axis=1).mean()\n",
+    "        )\n",
+    "        metric = \"train coef: {:.4f}\".format(scores_train[-1])\n",
+    "        if valid_idx is not None:\n",
+    "            df_prd = pd.DataFrame(\n",
+    "                target_proc.inverse_transform(m.predict(ds_valid, verbose = 0)), \n",
+    "                index = df_true.index, columns = targets\n",
+    "            )\n",
+    "            scores_valid.append(\n",
+    "                df_true.apply(lambda x: spearmanr(x, df_prd.loc[x.name])[0], axis=1).mean()\n",
+    "            )\n",
+    "            metric = metric + \", valid coef: {:.4f}\".format(scores_valid[-1])\n",
+    "        progress_bar.set_postfix_str(metric)\n",
+    "        progress_bar.update(1)\n",
+    "    progress_bar.close()\n",
+    "    return scores, df_prd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c22d774a-5ca2-4a50-bb36-c626fbbf4424",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_shape = (img_width, img_height, 3)\n",
-    "enet = tf.keras.applications.EfficientNetB0(\n",
-    "    include_top = False, \n",
-    "    weights = 'imagenet',\n",
-    "    input_shape = input_shape,\n",
-    "    pooling = 'avg'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "d08aa61c-806d-4c04-b228-132bd9491c3b",
    "metadata": {},
    "outputs": [
@@ -181,7 +285,7 @@
        "array([0, 1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,77 +304,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7c232f76-f043-4274-bde7-2e9743e39112",
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 32\n",
-    "ds_cv_train = create_tf_ds(\n",
-    "    df_spots.loc[df_spots['slide'] != 5].pipe(\n",
-    "        lambda x: pd.concat([\n",
-    "            x, x.sample(n = batch_size - (len(x) % batch_size))\n",
-    "        ])\n",
+    "img_width = 224\n",
+    "img_height = 224\n",
+    "df_spots = make_img_proc_info(df_spots, img_width, img_height)\n",
+    "df_spots_test = make_img_proc_info(df_spots_test, img_width, img_height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8ffea29a-6174-4f4d-b698-f48043b903ed",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a87ae3495c74507a519433c2f52a89b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "train 0:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c52ce4cdb55a42c29fef27793c6a93e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "train 1:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e4f3dd830676461eb5998a471c6095b0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "train 2:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c128d5cc9bd9487495026e7904bc9244",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "train 3:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9d09837fc0c0487c9e0c25400a1269d2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "train 4:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9ca7e9056ed44f88597ea3a60dea284",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "train 5:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GroupKFold\n",
+    "gkf = GroupKFold(n_splits = 6)\n",
+    "scores = list()\n",
+    "oofs = list()\n",
+    "for i, (train_idx, valid_idx) in enumerate(\n",
+    "    gkf.split(df_spots[['x', 'y']], df_spots[targets], groups = df_spots['slide'])\n",
+    "):\n",
+    "    m, layers = create_model(img_width, img_height)\n",
+    "    score_1, df_prd = train_model(\n",
+    "        m, train_idx, valid_idx, learning_rate = 1e-6, \n",
+    "        target_proc = target_proc, batch_size = 32, epochs = 20, step = 'train {}'.format(i)\n",
     "    )\n",
-    ").shuffle(5000).map(\n",
-    "    lambda X, Y: (proc_images(X, images), Y)\n",
-    ").map(\n",
-    "    lambda X, Y: (data_augmentation(X), Y)\n",
-    ").batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()\n",
-    "\n",
-    "ds_valid = create_tf_ds(df_spots.loc[df_spots['slide'] == 5]).map(\n",
-    "    lambda X, Y: (proc_images(X, images), Y)\n",
-    ").batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()"
+    "    \"\"\"\n",
+    "    m = reconstruct_model(layers)\n",
+    "    score_2, df_prd = train_model(\n",
+    "        m, train_idx, valid_idx, learning_rate = 1e-6, \n",
+    "        target_proc = target_proc, batch_size = 32, epochs = 10, step = 'fine tuning {}'.format(i)\n",
+    "    )\n",
+    "    \"\"\"\n",
+    "    scores.append(score_1)\n",
+    "    oofs.append(df_prd)\n",
+    "df_oof = pd.concat(oofs, axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b4cd9770",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['result/cv_eff_b0.joblib']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump((df_oof, scores), 'result/cv_eff_b0.joblib')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ffea29a-6174-4f4d-b698-f48043b903ed",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "025c489c",
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "from scipy.stats import spearmanr\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "inputs = tf.keras.Input(shape = input_shape)\n",
-    "x = enet(inputs, training = False)\n",
-    "x = tf.keras.layers.Dropout(0.2)(x)\n",
-    "d1 = tf.keras.layers.Dense(64, activation = 'relu', kernel_initializer = 'HeUniform')\n",
-    "x = d1(x)\n",
-    "d2 = tf.keras.layers.Dense(len(targets))\n",
-    "outputs = d2(x)\n",
-    "m = tf.keras.models.Model(inputs, outputs)\n",
-    "\n",
-    "lr_schedule = tf.keras.optimizers.schedules.CosineDecay(\n",
-    "    initial_learning_rate=3e-6,\n",
-    "    decay_steps=5000,\n",
-    "    alpha=0.1\n",
-    ")\n",
-    "\n",
-    "m.compile(\n",
-    "    loss = tf.keras.losses.MeanSquaredError(),\n",
-    "    optimizer = tf.keras.optimizers.Adam(learning_rate = lr_schedule),\n",
-    "    metrics = [tf.keras.metrics.MeanSquaredError()]\n",
-    ")\n",
-    "\n",
-    "df_true = pd.DataFrame(\n",
-    "    target_proc.inverse_transform(\n",
-    "        df_spots.loc[df_spots['slide'] == 5, targets]\n",
-    "    ), index = df_spots[df_spots['slide'] == 5].index, columns = targets\n",
-    ")\n",
-    "for i in range(30):\n",
-    "    hist = m.fit(ds_cv_train)\n",
-    "    df_prd = pd.DataFrame(\n",
-    "        target_proc.inverse_transform(m.predict(ds_valid)), index = df_spots[df_spots['slide'] == 5].index, columns = targets\n",
-    "    )\n",
-    "    print(\n",
-    "        df_true.apply(lambda x: spearmanr(x, df_prd.loc[x.name])[0], axis=1).mean(),\n",
-    "        mean_squared_error(df_true.stack(), df_prd.stack())\n",
-    "    )"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
