--- a/kaggle/Elucidata/ML_log_std_pca_5_eff_b0_mae.ipynb
+++ b/kaggle/Elucidata/ML_log_std_pca_5_eff_b0_mae.ipynb
@@ -5,7 +5,22 @@
    "execution_count": 1,
    "id": "49ca6e1c-6c6c-40b2-afa8-a36faf0cf557",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-07 05:47:46.438163: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1744004866.449755   53445 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1744004866.453335   53445 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1744004866.462586   53445 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744004866.462598   53445 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744004866.462600   53445 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744004866.462601   53445 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
@@ -41,7 +56,15 @@
    "execution_count": 2,
    "id": "4b9d49ae-5b81-440d-9553-2b3c157d9b95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1744004872.393736   53445 gpu_device.cc:2019] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4784 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2060, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
+     ]
+    }
+   ],
    "source": [
     "def load_data(filename):\n",
     "    \"\"\"\n",
@@ -247,9 +270,9 @@
     "    )\n",
     "#    lr_schedule = learning_rate\n",
     "    m.compile(\n",
-    "        loss = tf.keras.losses.MeanSquaredError(),\n",
+    "        loss = tf.keras.losses.MeanAbsoluteError(),\n",
     "        optimizer = tf.keras.optimizers.Adam(learning_rate = lr_schedule),\n",
-    "        metrics = [tf.keras.metrics.MeanSquaredError()]\n",
+    "        metrics = [tf.keras.metrics.MeanAbsoluteError()]\n",
     "    )\n",
     "\n",
     "    df_true_train = df_spots.iloc[train_idx][targets]\n",
@@ -315,7 +338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16d48324d34840b4939c62ecae93501f",
+       "model_id": "0a1e3cb7cae8408786c9e676d8a5dc1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,9 +350,24 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1744004930.068654   53581 service.cc:152] XLA service 0x7ff41c002080 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "I0000 00:00:1744004930.068678   53581 service.cc:160]   StreamExecutor device (0): NVIDIA GeForce RTX 2060, Compute Capability 7.5\n",
+      "I0000 00:00:1744004933.457039   53581 cuda_dnn.cc:529] Loaded cuDNN version 90300\n",
+      "2025-04-07 05:49:00.616220: E external/local_xla/xla/stream_executor/cuda/cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "2025-04-07 05:49:00.739206: E external/local_xla/xla/stream_executor/cuda/cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "2025-04-07 05:49:01.098422: E external/local_xla/xla/stream_executor/cuda/cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "2025-04-07 05:49:01.220180: E external/local_xla/xla/stream_executor/cuda/cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "I0000 00:00:1744004954.432488   53581 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdf5f9d92fa14642aede341bfb33ebae",
+       "model_id": "c0d21852bb6a4dc5b81f49b7c0a88116",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,7 +381,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b708d81ae8534bc98ddcb79a668881b9",
+       "model_id": "e3227961569646768495375d0fec025d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -357,7 +395,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83882e84a33c48a49e4775179aaa5d64",
+       "model_id": "e71e3c00610543f59e34e6c9de2423c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -371,7 +409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b735e6d2e0546d999bbdb96386a8304",
+       "model_id": "1d94e63c7be04642afb2e27968df8ddc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,7 +423,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d73ed9676604a3b9d835d946f89c7ac",
+       "model_id": "7f2d96d7ea35405a99291d8891013e1b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -407,7 +445,7 @@
     "):\n",
     "    m, layers = create_model(img_width, img_height)\n",
     "    score_1, df_prd = train_model(\n",
-    "        m, train_idx, valid_idx, learning_rate = 5e-7, \n",
+    "        m, train_idx, valid_idx, learning_rate = 1e-7, \n",
     "        target_proc = target_proc, batch_size = 32, epochs = 10, step = 'train {}'.format(i)\n",
     "    )\n",
     "    \"\"\"\n",
@@ -420,6 +458,30 @@
     "    scores.append(score_1)\n",
     "    oofs.append(df_prd)\n",
     "df_oof = pd.concat(oofs, axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "95eae213-e17c-4fc2-bba2-e02232778aea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.5500321244799273)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import spearmanr\n",
+    "df_oof[targets].apply(\n",
+    "    lambda x: spearmanr(df_spots.loc[x.name, targets], x)[0], axis=1\n",
+    ").mean()"
    ]
   },
   {
@@ -440,7 +502,7 @@
     }
    ],
    "source": [
-    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b0.joblib')"
+    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b0_mae.joblib')"
    ]
   },
   {
