--- a/kaggle/Elucidata/ML_log_std_pca_5_eff_b0_S1_2_rt_mae.ipynb
+++ b/kaggle/Elucidata/ML_log_std_pca_5_eff_b0_S1_2_rt_mae.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "49ca6e1c-6c6c-40b2-afa8-a36faf0cf557",
    "metadata": {},
    "outputs": [],
@@ -38,10 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "4b9d49ae-5b81-440d-9553-2b3c157d9b95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 107\u001b[0m\n\u001b[1;32m    104\u001b[0m         x \u001b[38;5;241m=\u001b[39m layer(x)\n\u001b[1;32m    105\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x\n\u001b[0;32m--> 107\u001b[0m images, df_spots, images_test, df_spots_test \u001b[38;5;241m=\u001b[39m \u001b[43mload_data\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata/elucidata_ai_challenge_data.h5\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    108\u001b[0m targets \u001b[38;5;241m=\u001b[39m [i \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m df_spots\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;28;01mif\u001b[39;00m i\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m)]\n\u001b[1;32m    109\u001b[0m n_components \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n",
+      "Cell \u001b[0;32mIn[11], line 49\u001b[0m, in \u001b[0;36mload_data\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;66;03m# EfficientNet의 형식으로 바꿉니다.\u001b[39;00m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/CPU:0\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m---> 49\u001b[0m     images \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconstant\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkeras\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapplications\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mefficientnet\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpreprocess_input\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimages\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     50\u001b[0m df_spots \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(spots)\u001b[38;5;241m.\u001b[39mreset_index(drop \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/CPU:0\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
+      "File \u001b[0;32m~/python312/lib/python3.12/site-packages/tensorflow/python/ops/weak_tensor_ops.py:142\u001b[0m, in \u001b[0;36mweak_tensor_binary_op_wrapper.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    140\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapper\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    141\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ops\u001b[38;5;241m.\u001b[39mis_auto_dtype_conversion_enabled():\n\u001b[0;32m--> 142\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mop\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    143\u001b[0m   bound_arguments \u001b[38;5;241m=\u001b[39m signature\u001b[38;5;241m.\u001b[39mbind(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m    144\u001b[0m   bound_arguments\u001b[38;5;241m.\u001b[39mapply_defaults()\n",
+      "File \u001b[0;32m~/python312/lib/python3.12/site-packages/tensorflow/python/framework/constant_op.py:276\u001b[0m, in \u001b[0;36mconstant\u001b[0;34m(value, dtype, shape, name)\u001b[0m\n\u001b[1;32m    177\u001b[0m \u001b[38;5;129m@tf_export\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconstant\u001b[39m\u001b[38;5;124m\"\u001b[39m, v1\u001b[38;5;241m=\u001b[39m[])\n\u001b[1;32m    178\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconstant\u001b[39m(\n\u001b[1;32m    179\u001b[0m     value, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, shape\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mConst\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    180\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Union[ops\u001b[38;5;241m.\u001b[39mOperation, ops\u001b[38;5;241m.\u001b[39m_EagerTensorBase]:\n\u001b[1;32m    181\u001b[0m \u001b[38;5;250m  \u001b[39m\u001b[38;5;124;03m\"\"\"Creates a constant tensor from a tensor-like object.\u001b[39;00m\n\u001b[1;32m    182\u001b[0m \n\u001b[1;32m    183\u001b[0m \u001b[38;5;124;03m  Note: All eager `tf.Tensor` values are immutable (in contrast to\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    274\u001b[0m \u001b[38;5;124;03m    ValueError: if called on a symbolic tensor.\u001b[39;00m\n\u001b[1;32m    275\u001b[0m \u001b[38;5;124;03m  \"\"\"\u001b[39;00m\n\u001b[0;32m--> 276\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_constant_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverify_shape\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    277\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mallow_broadcast\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/python312/lib/python3.12/site-packages/tensorflow/python/framework/constant_op.py:289\u001b[0m, in \u001b[0;36m_constant_impl\u001b[0;34m(value, dtype, shape, name, verify_shape, allow_broadcast)\u001b[0m\n\u001b[1;32m    287\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m trace\u001b[38;5;241m.\u001b[39mTrace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtf.constant\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    288\u001b[0m       \u001b[38;5;28;01mreturn\u001b[39;00m _constant_eager_impl(ctx, value, dtype, shape, verify_shape)\n\u001b[0;32m--> 289\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_constant_eager_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mctx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverify_shape\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    291\u001b[0m const_tensor \u001b[38;5;241m=\u001b[39m ops\u001b[38;5;241m.\u001b[39m_create_graph_constant(  \u001b[38;5;66;03m# pylint: disable=protected-access\u001b[39;00m\n\u001b[1;32m    292\u001b[0m     value, dtype, shape, name, verify_shape, allow_broadcast\n\u001b[1;32m    293\u001b[0m )\n\u001b[1;32m    294\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m const_tensor\n",
+      "File \u001b[0;32m~/python312/lib/python3.12/site-packages/tensorflow/python/framework/constant_op.py:301\u001b[0m, in \u001b[0;36m_constant_eager_impl\u001b[0;34m(ctx, value, dtype, shape, verify_shape)\u001b[0m\n\u001b[1;32m    297\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_constant_eager_impl\u001b[39m(\n\u001b[1;32m    298\u001b[0m     ctx, value, dtype, shape, verify_shape\n\u001b[1;32m    299\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m ops\u001b[38;5;241m.\u001b[39m_EagerTensorBase:\n\u001b[1;32m    300\u001b[0m \u001b[38;5;250m  \u001b[39m\u001b[38;5;124;03m\"\"\"Creates a constant on the current device.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 301\u001b[0m   t \u001b[38;5;241m=\u001b[39m \u001b[43mconvert_to_eager_tensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mctx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    302\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m shape \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    303\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m t\n",
+      "File \u001b[0;32m~/python312/lib/python3.12/site-packages/tensorflow/python/framework/constant_op.py:108\u001b[0m, in \u001b[0;36mconvert_to_eager_tensor\u001b[0;34m(value, ctx, dtype)\u001b[0m\n\u001b[1;32m    106\u001b[0m     dtype \u001b[38;5;241m=\u001b[39m dtypes\u001b[38;5;241m.\u001b[39mas_dtype(dtype)\u001b[38;5;241m.\u001b[39mas_datatype_enum\n\u001b[1;32m    107\u001b[0m ctx\u001b[38;5;241m.\u001b[39mensure_initialized()\n\u001b[0;32m--> 108\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mops\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mEagerTensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mctx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "def load_data(filename):\n",
     "    \"\"\"\n",
@@ -70,6 +88,16 @@
     "                np.pad(image, [(0, p1), (0, p2), (0, 0)], 'edge')\n",
     "            )\n",
     "            spots.append(pd.DataFrame(np.array(train_spots[slide_name])).assign(slide = i))\n",
+    "            if slide_name == 'S_1':\n",
+    "                spots[-1] = spots[-1].assign(\n",
+    "                    x = lambda x: x['x'] - 50,\n",
+    "                    y = lambda x: x['y'] - 50,\n",
+    "                )\n",
+    "            elif slide_name == 'S_2':\n",
+    "                spots[-1] = spots[-1].assign(\n",
+    "                    x = lambda x: x['x'] - 60,\n",
+    "                    y = lambda x: x['y'] - 60,\n",
+    "                )\n",
     "        # Test 이미지를 불러옵니다.\n",
     "        test_images = h5file[\"images/Test\"]\n",
     "        test_spots = h5file[\"spots/Test\"]\n",
@@ -131,7 +159,7 @@
     "    tf.keras.layers.RandomFlip(\"horizontal_and_vertical\"),\n",
     "    tf.keras.layers.RandomRotation(0.5),\n",
     "    tf.keras.layers.RandomZoom(0.1),\n",
-    "    tf.keras.layers.RandomContrast(0.1)\n",
+    "    tf.keras.layers.RandomContrast(0.1),\n",
     "]\n",
     "\n",
     "def data_augmentation(x):\n",
@@ -154,33 +182,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "da1983a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 6, figsize=(14, 3))\n",
+    "for i, slide_name in enumerate(range(6)):\n",
+    "    image = images[i]\n",
+    "    x, y = df_spots.loc[df_spots['slide'] == i, \"x\"], df_spots.loc[df_spots['slide'] == i, \"y\"]\n",
+    "\n",
+    "    ax[i].imshow(image, aspect=\"auto\")\n",
+    "    ax[i].scatter(x, y, color=\"red\", s=1, alpha=0.4)  # Overlay spot locations\n",
+    "    ax[i].set_title(slide_name)\n",
+    "    ax[i].axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d08aa61c-806d-4c04-b228-132bd9491c3b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4, 5])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_spots['slide'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "85f6bb94-80cf-4636-956d-26eb52785bea",
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.stats import spearmanr\n",
+    "img_width = 224\n",
+    "img_height = 224\n",
     "\n",
     "def create_model(img_width, img_height):\n",
     "    input_shape = (img_width, img_height, 3)\n",
@@ -219,6 +259,15 @@
     "    ds_cv_train = create_tf_ds(\n",
     "        df_spots.iloc[train_idx].pipe(\n",
     "            lambda x: pd.concat([\n",
+    "                x, x.sample(frac=0.5).assign(\n",
+    "                    left = lambda x: x['left'] + np.random.normal(scale = 10, size = len(x)).astype('int') + np.random.choice([-5, 5], size = len(x)),\n",
+    "                    right = lambda x: x['left'] + img_width,\n",
+    "                    top = lambda x: x['top'] + np.random.normal(scale = 10, size = len(x)).astype('int') + np.random.choice([-5, 5], size = len(x)),\n",
+    "                    bottom = lambda x: x['top'] + img_height,\n",
+    "                ).query('left >= 0 and right <= 2000 and top >= 0 and bottom <= 2000')\n",
+    "            ])\n",
+    "        ).pipe(\n",
+    "            lambda x: pd.concat([\n",
     "                x, x.sample(n = batch_size - (len(x) % batch_size))\n",
     "            ])\n",
     "        )\n",
@@ -247,9 +296,9 @@
     "    )\n",
     "#    lr_schedule = learning_rate\n",
     "    m.compile(\n",
-    "        loss = tf.keras.losses.MeanSquaredError(),\n",
+    "        loss = tf.keras.losses.MeanAbsoluteError(),\n",
     "        optimizer = tf.keras.optimizers.Adam(learning_rate = lr_schedule),\n",
-    "        metrics = [tf.keras.metrics.MeanSquaredError()]\n",
+    "        metrics = [tf.keras.metrics.MeanAbsoluteError()]\n",
     "    )\n",
     "\n",
     "    df_true_train = df_spots.iloc[train_idx][targets]\n",
@@ -295,108 +344,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0271b002",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_width = 224\n",
-    "img_height = 224\n",
     "df_spots = make_img_proc_info(df_spots, img_width, img_height)\n",
     "df_spots_test = make_img_proc_info(df_spots_test, img_width, img_height)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e0405540-a28d-4ece-a479-bc8ae991fe4a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16d48324d34840b4939c62ecae93501f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train 0:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdf5f9d92fa14642aede341bfb33ebae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train 1:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b708d81ae8534bc98ddcb79a668881b9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train 2:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83882e84a33c48a49e4775179aaa5d64",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train 3:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b735e6d2e0546d999bbdb96386a8304",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train 4:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d73ed9676604a3b9d835d946f89c7ac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train 5:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import GroupKFold\n",
     "gkf = GroupKFold(n_splits = 6)\n",
@@ -407,7 +369,7 @@
     "):\n",
     "    m, layers = create_model(img_width, img_height)\n",
     "    score_1, df_prd = train_model(\n",
-    "        m, train_idx, valid_idx, learning_rate = 5e-7, \n",
+    "        m, train_idx, valid_idx, learning_rate = 1e-7, \n",
     "        target_proc = target_proc, batch_size = 32, epochs = 10, step = 'train {}'.format(i)\n",
     "    )\n",
     "    \"\"\"\n",
@@ -424,6 +386,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "89f23c44-1104-48e8-99f9-ec45500d274e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import spearmanr\n",
+    "df_oof[targets].groupby(df_spots['slide']).apply(\n",
+    "    lambda x: x.apply(lambda x: spearmanr(df_spots.loc[x.name, targets], x)[0], axis = 1).mean()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2e7cdfbd-3703-459d-ba81-bf2a6056f208",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.550668474360639)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import spearmanr\n",
+    "df_oof[targets].apply(\n",
+    "    lambda x: spearmanr(df_spots.loc[x.name, targets], x)[0], axis=1\n",
+    ").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "e4d19d2a",
    "metadata": {},
@@ -431,7 +430,7 @@
     {
      "data": {
       "text/plain": [
-       "['result/cv_log_std_pca_5_eff_b0.joblib']"
+       "['result/cv_log_std_pca_5_eff_b0_rt.joblib']"
       ]
      },
      "execution_count": 7,
@@ -440,7 +439,7 @@
     }
    ],
    "source": [
-    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b0.joblib')"
+    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b0_rt.joblib')"
    ]
   },
   {
