--- a/kaggle/Elucidata/ML_log_std_pca_5_eff_b1.ipynb
+++ b/kaggle/Elucidata/ML_log_std_pca_5_eff_b1.ipynb
@@ -609,7 +609,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -623,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
