--- a/kaggle/Elucidata/ML_log_std_pca_5_eff_b1_mae.ipynb
+++ b/kaggle/Elucidata/ML_log_std_pca_5_eff_b1_mae.ipynb
@@ -5,7 +5,22 @@
    "execution_count": 1,
    "id": "49ca6e1c-6c6c-40b2-afa8-a36faf0cf557",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-07 04:53:13.871423: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1744001593.883159   43489 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1744001593.886780   43489 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1744001593.896083   43489 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744001593.896096   43489 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744001593.896097   43489 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744001593.896098   43489 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
@@ -41,7 +56,15 @@
    "execution_count": 2,
    "id": "4b9d49ae-5b81-440d-9553-2b3c157d9b95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1744001596.188586   43489 gpu_device.cc:2019] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4784 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2060, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
+     ]
+    }
+   ],
    "source": [
     "def load_data(filename):\n",
     "    \"\"\"\n",
@@ -70,6 +93,18 @@
     "                np.pad(image, [(0, p1), (0, p2), (0, 0)], 'edge')\n",
     "            )\n",
     "            spots.append(pd.DataFrame(np.array(train_spots[slide_name])).assign(slide = i))\n",
+    "            \"\"\" 시각화에서는 의미 있어 보이지 만 실제로 오히려 성능이 떨어집니다.\n",
+    "            if slide_name == 'S_1':\n",
+    "                spots[-1] = spots[-1].assign(\n",
+    "                    x = lambda x: x['x'] - 50,\n",
+    "                    y = lambda x: x['y'] - 50,\n",
+    "                )\n",
+    "            elif slide_name == 'S_2':\n",
+    "                spots[-1] = spots[-1].assign(\n",
+    "                    x = lambda x: x['x'] - 60,\n",
+    "                    y = lambda x: x['y'] - 60,\n",
+    "                )\n",
+    "            \"\"\"\n",
     "        # Test 이미지를 불러옵니다.\n",
     "        test_images = h5file[\"images/Test\"]\n",
     "        test_spots = h5file[\"spots/Test\"]\n",
@@ -184,7 +219,7 @@
     "\n",
     "def create_model(img_width, img_height):\n",
     "    input_shape = (img_width, img_height, 3)\n",
-    "    enet = tf.keras.applications.EfficientNetB0(\n",
+    "    enet = tf.keras.applications.EfficientNetB1(\n",
     "        include_top = False, \n",
     "        weights = 'imagenet',\n",
     "        input_shape = input_shape,\n",
@@ -247,9 +282,9 @@
     "    )\n",
     "#    lr_schedule = learning_rate\n",
     "    m.compile(\n",
-    "        loss = tf.keras.losses.MeanSquaredError(),\n",
+    "        loss = tf.keras.losses.MeanAbsoluteError(),\n",
     "        optimizer = tf.keras.optimizers.Adam(learning_rate = lr_schedule),\n",
-    "        metrics = [tf.keras.metrics.MeanSquaredError()]\n",
+    "        metrics = [tf.keras.metrics.MeanAbsoluteError()]\n",
     "    )\n",
     "\n",
     "    df_true_train = df_spots.iloc[train_idx][targets]\n",
@@ -315,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16d48324d34840b4939c62ecae93501f",
+       "model_id": "83f7329ba93e48389c5fba97ed456c44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,9 +362,24 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1744001648.348943   43564 service.cc:152] XLA service 0x7f11cc003ea0 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "I0000 00:00:1744001648.348961   43564 service.cc:160]   StreamExecutor device (0): NVIDIA GeForce RTX 2060, Compute Capability 7.5\n",
+      "I0000 00:00:1744001653.174886   43564 cuda_dnn.cc:529] Loaded cuDNN version 90300\n",
+      "2025-04-07 04:54:22.503950: E external/local_xla/xla/stream_executor/cuda/cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "2025-04-07 04:54:22.627523: E external/local_xla/xla/stream_executor/cuda/cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "2025-04-07 04:54:22.986742: E external/local_xla/xla/stream_executor/cuda/cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "2025-04-07 04:54:23.109381: E external/local_xla/xla/stream_executor/cuda/cuda_timer.cc:86] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "I0000 00:00:1744001681.544363   43564 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdf5f9d92fa14642aede341bfb33ebae",
+       "model_id": "cc5a78a624084f10b110b81e44802899",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,7 +393,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b708d81ae8534bc98ddcb79a668881b9",
+       "model_id": "242f204445e743989de4c61470e9fe00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -357,7 +407,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83882e84a33c48a49e4775179aaa5d64",
+       "model_id": "bb08d469ed2843789fc5db7b16bc9ee5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -371,7 +421,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b735e6d2e0546d999bbdb96386a8304",
+       "model_id": "94a62c4806504e9c8cac3a9253c0bffd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,7 +435,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d73ed9676604a3b9d835d946f89c7ac",
+       "model_id": "b12f80d4c11245748644df92db186aac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -407,7 +457,7 @@
     "):\n",
     "    m, layers = create_model(img_width, img_height)\n",
     "    score_1, df_prd = train_model(\n",
-    "        m, train_idx, valid_idx, learning_rate = 5e-7, \n",
+    "        m, train_idx, valid_idx, learning_rate = 1e-7, \n",
     "        target_proc = target_proc, batch_size = 32, epochs = 10, step = 'train {}'.format(i)\n",
     "    )\n",
     "    \"\"\"\n",
@@ -425,13 +475,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e4d19d2a",
+   "id": "762c893f-0cb5-4bd8-9e76-65c8b2069d2c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['result/cv_log_std_pca_5_eff_b0.joblib']"
+       "np.float64(0.5463410804494273)"
       ]
      },
      "execution_count": 7,
@@ -440,7 +490,33 @@
     }
    ],
    "source": [
-    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b0.joblib')"
+    "from scipy.stats import spearmanr\n",
+    "df_oof[targets].apply(\n",
+    "    lambda x: spearmanr(df_spots.loc[x.name, targets], x)[0], axis=1\n",
+    ").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e4d19d2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'result/cv_log_std_pca_5_eff_b1_mae.joblib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mjoblib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdump\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_oof\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscores\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mresult/cv_log_std_pca_5_eff_b1_mae.joblib\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/python312/lib/python3.12/site-packages/joblib/numpy_pickle.py:552\u001b[0m, in \u001b[0;36mdump\u001b[0;34m(value, filename, compress, protocol, cache_size)\u001b[0m\n\u001b[1;32m    550\u001b[0m         NumpyPickler(f, protocol\u001b[38;5;241m=\u001b[39mprotocol)\u001b[38;5;241m.\u001b[39mdump(value)\n\u001b[1;32m    551\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_filename:\n\u001b[0;32m--> 552\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mwb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m    553\u001b[0m         NumpyPickler(f, protocol\u001b[38;5;241m=\u001b[39mprotocol)\u001b[38;5;241m.\u001b[39mdump(value)\n\u001b[1;32m    554\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'result/cv_log_std_pca_5_eff_b1_mae.joblib'"
+     ]
+    }
+   ],
+   "source": [
+    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b1_mae.joblib')"
    ]
   },
   {
@@ -471,17 +547,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/keras-applications/efficientnetb0_notop.h5\n",
-      "\u001b[1m16705208/16705208\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62d860e9401e463fa960256e62f0d472",
+       "model_id": "98014d1c070a4672b1b5717a5f19cfe2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -561,7 +629,7 @@
     {
      "data": {
       "text/plain": [
-       "['model/log_std_pca_5_eff_b0.joblib']"
+       "['model/log_std_pca_5_eff_b1.joblib']"
       ]
      },
      "execution_count": 9,
@@ -570,7 +638,7 @@
     }
    ],
    "source": [
-    "joblib.dump(m.get_weights(), 'model/log_std_pca_5_eff_b0.joblib')"
+    "joblib.dump(m.get_weights(), 'model/log_std_pca_5_eff_b1.joblib')"
    ]
   },
   {
@@ -582,7 +650,7 @@
     {
      "data": {
       "text/plain": [
-       "['model/target_proc_log_std_pca_5_eff_b0.joblib']"
+       "['model/target_proc_log_std_pca_5_eff_b1.joblib']"
       ]
      },
      "execution_count": 10,
@@ -591,7 +659,7 @@
     }
    ],
    "source": [
-    "joblib.dump(target_proc, 'model/target_proc_log_std_pca_5_eff_b0.joblib') "
+    "joblib.dump(target_proc, 'model/target_proc_log_std_pca_5_eff_b1.joblib') "
    ]
   },
   {
