--- a/kaggle/Elucidata/ML_log_std_pca_5_eff_b0_S2_mse.ipynb
+++ b/kaggle/Elucidata/ML_log_std_pca_5_eff_b0_S2_mse.ipynb
@@ -290,9 +290,9 @@
     "    )\n",
     "#    lr_schedule = learning_rate\n",
     "    m.compile(\n",
-    "        loss = tf.keras.losses.MeanAbsoluteError(),\n",
+    "        loss = tf.keras.losses.MeanSquaredError(),\n",
     "        optimizer = tf.keras.optimizers.Adam(learning_rate = lr_schedule),\n",
-    "        metrics = [tf.keras.metrics.MeanAbsoluteError()]\n",
+    "        metrics = [tf.keras.metrics.MeanSquaredError()]\n",
     "    )\n",
     "\n",
     "    df_true_train = df_spots.iloc[train_idx][targets]\n",
@@ -356,17 +356,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/keras-applications/efficientnetb0_notop.h5\n",
-      "\u001b[1m16705208/16705208\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f482a281d17441e78ff73d4ac74c516f",
+       "model_id": "db10d87b2e3f45a88a80e80d6a855a7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -380,7 +372,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e120a4f116b64dc8813b1acda345162b",
+       "model_id": "63383d63d04f4d929f0970faebe0d2ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -394,7 +386,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40d9fa35be56407b9cdab9aeb527ae0a",
+       "model_id": "a85656bd233d405184053bfe450788e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,7 +400,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c480b673f9d40deada17b0718144f9b",
+       "model_id": "304eb0e85202432d8d7dd92d789a24d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,7 +414,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bfd90f56efd4afea9970dc65d1cf261",
+       "model_id": "f3266d46984848dfb7d65fa3768b709c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -436,7 +428,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3dbfcbfd61641a489f174e8bda0811b",
+       "model_id": "e3b6d96d869642779ef0a01de3d23870",
        "version_major": 2,
        "version_minor": 0
       },
@@ -483,12 +475,12 @@
      "data": {
       "text/plain": [
        "slide\n",
-       "0    0.522792\n",
-       "1    0.674354\n",
-       "2    0.664781\n",
-       "3    0.461817\n",
-       "4    0.346289\n",
-       "5    0.588020\n",
+       "0    0.523452\n",
+       "1    0.776939\n",
+       "2    0.607110\n",
+       "3    0.511377\n",
+       "4    0.325316\n",
+       "5    0.536731\n",
        "dtype: float64"
       ]
      },
@@ -513,7 +505,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5341752798855798"
+       "0.5582929638498111"
       ]
      },
      "execution_count": 9,
@@ -530,23 +522,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "e4d19d2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['result/cv_log_std_pca_5_eff_b0_S2_mae.joblib']"
+       "['result/cv_log_std_pca_5_eff_b0_S2_mse.joblib']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b0_S2_mae.joblib')"
+    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b0_S2_mse.joblib')"
    ]
   },
   {
@@ -559,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "f0a9b458",
    "metadata": {},
    "outputs": [],
@@ -572,14 +564,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "7c78e79c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6abeadba5f9a46a7b0a9092d4b9a7c62",
+       "model_id": "a0c710cdd0d44aa0bb8cff0d0dcd3ca5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -652,44 +644,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "8872b7f4-5a81-4cbe-bf0e-860c1fecae0a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model/log_std_pca_5_eff_b0_S2_mae.joblib']"
+       "['model/log_std_pca_5_eff_b0_S2_mse.joblib']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(m.get_weights(), 'model/log_std_pca_5_eff_b0_S2_mae.joblib')"
+    "joblib.dump(m.get_weights(), 'model/log_std_pca_5_eff_b0_S2_mse.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "324394a4-4a9d-4ac1-a7ab-e923c2c3b5b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model/target_proc_log_std_pca_5_eff_b0_S2_mae.joblib']"
+       "['model/target_proc_log_std_pca_5_eff_b0_S2_mse.joblib']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(target_proc, 'model/target_proc_log_std_pca_5_eff_b0_S2_mae.joblib') "
+    "joblib.dump(target_proc, 'model/target_proc_log_std_pca_5_eff_b0_S2_mse.joblib') "
    ]
   },
   {
