--- a/kaggle/Elucidata/ML_log_std_pca_5_eff_b1_S2_mse.ipynb
+++ b/kaggle/Elucidata/ML_log_std_pca_5_eff_b1_S2_mse.ipynb
@@ -227,7 +227,7 @@
     "\n",
     "def create_model(img_width, img_height):\n",
     "    input_shape = (img_width, img_height, 3)\n",
-    "    enet = tf.keras.applications.EfficientNetB0(\n",
+    "    enet = tf.keras.applications.EfficientNetB1(\n",
     "        include_top = False, \n",
     "        weights = 'imagenet',\n",
     "        input_shape = input_shape,\n",
@@ -290,9 +290,9 @@
     "    )\n",
     "#    lr_schedule = learning_rate\n",
     "    m.compile(\n",
-    "        loss = tf.keras.losses.MeanAbsoluteError(),\n",
+    "        loss = tf.keras.losses.MeanSquaredError(),\n",
     "        optimizer = tf.keras.optimizers.Adam(learning_rate = lr_schedule),\n",
-    "        metrics = [tf.keras.metrics.MeanAbsoluteError()]\n",
+    "        metrics = [tf.keras.metrics.MeanSquaredError()]\n",
     "    )\n",
     "\n",
     "    df_true_train = df_spots.iloc[train_idx][targets]\n",
@@ -359,14 +359,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://storage.googleapis.com/keras-applications/efficientnetb0_notop.h5\n",
-      "\u001b[1m16705208/16705208\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n"
+      "Downloading data from https://storage.googleapis.com/keras-applications/efficientnetb1_notop.h5\n",
+      "\u001b[1m27018416/27018416\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 0us/step\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f482a281d17441e78ff73d4ac74c516f",
+       "model_id": "cc28aef9769d4304ad84e6130a010786",
        "version_major": 2,
        "version_minor": 0
       },
@@ -380,7 +380,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e120a4f116b64dc8813b1acda345162b",
+       "model_id": "64e2635fb02e4bb1bc376773e27465c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -394,7 +394,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40d9fa35be56407b9cdab9aeb527ae0a",
+       "model_id": "c12b1412801f4c628a5235d4cddad04a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,7 +408,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c480b673f9d40deada17b0718144f9b",
+       "model_id": "1552b3a1f64a421db64a1389376ce81f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,7 +422,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bfd90f56efd4afea9970dc65d1cf261",
+       "model_id": "fbc1ce586b4f45c1a4abfd6d186a1670",
        "version_major": 2,
        "version_minor": 0
       },
@@ -436,7 +436,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3dbfcbfd61641a489f174e8bda0811b",
+       "model_id": "2466bd75e99a49b9bc08c459daea479d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -483,12 +483,12 @@
      "data": {
       "text/plain": [
        "slide\n",
-       "0    0.522792\n",
-       "1    0.674354\n",
-       "2    0.664781\n",
-       "3    0.461817\n",
-       "4    0.346289\n",
-       "5    0.588020\n",
+       "0    0.494688\n",
+       "1    0.716031\n",
+       "2    0.653993\n",
+       "3    0.465905\n",
+       "4    0.385892\n",
+       "5    0.543335\n",
        "dtype: float64"
       ]
      },
@@ -513,7 +513,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5341752798855798"
+       "0.5440003046373658"
       ]
      },
      "execution_count": 9,
@@ -530,23 +530,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "e4d19d2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['result/cv_log_std_pca_5_eff_b0_S2_mae.joblib']"
+       "['result/cv_log_std_pca_5_eff_b1_S2_mse.joblib']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b0_S2_mae.joblib')"
+    "joblib.dump((df_oof, scores), 'result/cv_log_std_pca_5_eff_b1_S2_mse.joblib')"
    ]
   },
   {
@@ -579,7 +579,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6abeadba5f9a46a7b0a9092d4b9a7c62",
+       "model_id": "77e27868728f4933ba02c19cec860add",
        "version_major": 2,
        "version_minor": 0
       },
@@ -652,44 +652,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "8872b7f4-5a81-4cbe-bf0e-860c1fecae0a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model/log_std_pca_5_eff_b0_S2_mae.joblib']"
+       "['model/log_std_pca_5_eff_b1_S2_mse.joblib']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(m.get_weights(), 'model/log_std_pca_5_eff_b0_S2_mae.joblib')"
+    "joblib.dump(m.get_weights(), 'model/log_std_pca_5_eff_b1_S2_mse.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "324394a4-4a9d-4ac1-a7ab-e923c2c3b5b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model/target_proc_log_std_pca_5_eff_b0_S2_mae.joblib']"
+       "['model/target_proc_log_std_pca_5_eff_b1_S2_mse.joblib']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(target_proc, 'model/target_proc_log_std_pca_5_eff_b0_S2_mae.joblib') "
+    "joblib.dump(target_proc, 'model/target_proc_log_std_pca_5_eff_b1_S2_mse.joblib') "
    ]
   },
   {
