--- a/kaggle/Elucidata/Ensemble.ipynb
+++ b/kaggle/Elucidata/Ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "4cd334c4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "597bfa9b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "1349edf0",
    "metadata": {},
    "outputs": [],
@@ -70,41 +70,40 @@
     "df_log_std_pca_10_eff_b0, _ = joblib.load('result/cv_log_std_pca_10_eff_b0.joblib') # 0.536148846890535\n",
     "#df_log_std_pca_5_eff_b0_rt, _ = joblib.load('result/cv_log_std_pca_5_eff_b0_rt.joblib') # 0.5283482179552861\n",
     "df_log_std_pca_5_eff_b1, _ = joblib.load('result/cv_log_std_pca_5_eff_b1.joblib') # 0.5505204501251932\n",
-    "df_log_std_pca_5_eff_b3, _ = joblib.load('result/cv_log_std_pca_5_eff_b3.joblib') # 0.5427672949644584"
+    "df_log_std_pca_5_eff_b2, _ = joblib.load('result/cv_log_std_pca_5_eff_b2.joblib') # 0.5442914212037672\n",
+    "df_log_std_pca_5_eff_b3, _ = joblib.load('result/cv_log_std_pca_5_eff_b3.joblib') # 0.5427672949644584\n",
+    "df_log_std_pca_5_eff_b0_S2_mse, _ = joblib.load('result/cv_log_std_pca_5_eff_b0_S2_mse.joblib') # 0.5582929638498111\n",
+    "df_log_std_pca_5_eff_b0_S2_mae, _ = joblib.load('result/cv_log_std_pca_5_eff_b0_S2_mae.joblib') # 0.5341752798855798\n",
+    "df_log_std_pca_5_eff_b1_S2_mae, _ = joblib.load('result/cv_log_std_pca_5_eff_b1_S2_mae.joblib') # 0.5496152946745833\n",
+    "df_log_std_pca_5_eff_b1_S2_mse, _ = joblib.load('result/cv_log_std_pca_5_eff_b1_S2_mse.joblib') # 0.5440003046373658"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "b5f82c6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_log_std_pca_5_eff_b2, _ = joblib.load('result/cv_log_std_pca_5_eff_b2.joblib') # 0.5442914212037672"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "049a1754",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5519492697066853"
+       "0.5534741598946824"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prd = df_log_std_pca_5_eff_b0[targets].rank(axis = 1) * 0.5 + df_log_std_pca_10_eff_b0.rank(axis = 1) * 0.5\n",
-    "prd += df_log_std_pca_5_eff_b1[targets].rank(axis = 1) * 2.0 + df_log_std_pca_5_eff_b3.rank(axis = 1) * 0.5\n",
-    "prd += df_log_std_pca_5_eff_b2[targets].rank(axis = 1) * 0.5\n",
-    "# prd += df_log_std_pca_5_eff_b0_rt[targets].rank(axis = 1) * 0.1\n",
+    "prd = df_log_std_pca_5_eff_b0[targets].rank(axis = 1)\n",
+    "for i in [\n",
+    "    #df_log_std_pca_5_eff_b0, df_log_std_pca_10_eff_b0, \n",
+    "    df_log_std_pca_5_eff_b1, df_log_std_pca_5_eff_b2, df_log_std_pca_5_eff_b3,\n",
+    "    df_log_std_pca_5_eff_b0_S2_mse, df_log_std_pca_5_eff_b0_S2_mae,\n",
+    "    df_log_std_pca_5_eff_b1_S2_mae, df_log_std_pca_5_eff_b1_S2_mse\n",
+    "]:\n",
+    "    prd += i[targets].rank(axis = 1)\n",
     "from scipy.stats import spearmanr\n",
     "prd[targets].apply(\n",
     "    lambda x: spearmanr(df_spots.loc[x.name, targets], x)[0], axis=1\n",
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "7d09728a",
    "metadata": {},
    "outputs": [
@@ -123,7 +122,7 @@
        "0.5383309629996448"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "9660dc98",
    "metadata": {},
    "outputs": [
@@ -147,7 +146,7 @@
        "0.536148846890535"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "066989df",
    "metadata": {},
    "outputs": [
@@ -171,7 +170,7 @@
        "0.5505204501251932"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f1074d6f",
    "metadata": {},
    "outputs": [
@@ -195,7 +194,7 @@
        "0.5427672949644584"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "4af27637",
    "metadata": {},
    "outputs": [
@@ -219,7 +218,7 @@
        "0.5442914212037672"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,8 +232,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7f911465",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5582929638498111"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import spearmanr\n",
+    "df_log_std_pca_5_eff_b0_S2_mse[targets].apply(\n",
+    "    lambda x: spearmanr(df_spots.loc[x.name, targets], x)[0], axis=1\n",
+    ").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6d88756c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5341752798855798"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import spearmanr\n",
+    "df_log_std_pca_5_eff_b0_S2_mae[targets].apply(\n",
+    "    lambda x: spearmanr(df_spots.loc[x.name, targets], x)[0], axis=1\n",
+    ").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "198934be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5496152946745833"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import spearmanr\n",
+    "df_log_std_pca_5_eff_b1_S2_mae[targets].apply(\n",
+    "    lambda x: spearmanr(df_spots.loc[x.name, targets], x)[0], axis=1\n",
+    ").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "48048f55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5440003046373658"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import spearmanr\n",
+    "df_log_std_pca_5_eff_b1_S2_mse[targets].apply(\n",
+    "    lambda x: spearmanr(df_spots.loc[x.name, targets], x)[0], axis=1\n",
+    ").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93764fc1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -242,7 +337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
