--- a/kaggle/PGS5/PGS5_ep4/0. Submission.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/0. Submission.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "|Experiments name|Note|Validation Result|Public Score|의견|\n",
     "|---|----|-----|-----|----|\n",
-    "|TGT406 + LR|1-4 Target Encoding2.ipynb|4-fold CV, RMSE: 12.9223|13.46369|분리했을 때의 성능 집계에 신경을 써야함.<br/> 또한 결측이 있을 경우와 없을 때 분리에 큰 의미가 없음|"
+    "|LR_0|1-4 Target Encoding2.ipynb|4-fold CV, RMSE: 12.9223|13.46369|분리했을 때의 성능 집계에 신경을 써야함.<br/> 또한 결측이 있을 경우와 없을 때 분리에 큰 의미가 없음|"
    ]
   },
   {
